# ECG-featurizer

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  Test_notebook.ipynb  requirements.txt  setup.cfg  setup.py  tox.ini
.ipynb_checkpoints/: Test_notebook-checkpoint.ipynb
ECG-featurizer/: featurize.py
ECGfeaturizer/: featurize.py
docs/source/: Get started.rst  authors.rst  conf.py  contributing.rst  function.rst  index.rst  installation.rst  introduction.rst
src/: featurize.py
