[metadata]
name = ECG-featurizer
version = 0.0.1
license = GNU GENERAL PUBLIC LICENSE
description = This Python package recognize patterns in an ECG and derives features. 
long_description = file: README.md
author = Bjørn-Jostein SIngstad
author_email = bjorn_sing@hotmail.com
classifiers=
   Development Status :: 1 - Planning
   <classifier 2>
   <...>
   <classifier m>

[options]
packages = find:
package_dir =
    =ECG-featurizer
include_package_data = True
install_requires =
   NeuroKit2
   <requirement 2>
   <...>
   <requirement n>

[options.packages.find]
where=ECG-featurizer